complete my contract section

--- a/index.html
+++ b/index.html
@@ -151,7 +151,19 @@
     </div>
   </div>
 </section>
+</main>
+    <div class="header">
+        <h1>Join the colorful Bunch</h1>
+        <div class="subscribe-form">
+            <input type="email" placeholder="Your email" required>
+            <button type="submit">Subscribe</button>
+        </div>
+    </div>
 
-        </main>
+    <!-- footer section -->
+     <footer>
+       
+    </footer>
+ 
 </body>
 </html>
