please added this file

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <section class="promo-section">
   <div class="promo-container">
     <div class="left-column">
-      <div class="promo-card small" style="background-image: url('/images/assets/deal-bloom.png');">
+      <div class="promo-card small" style="background-image: url('../images/assets/deal-bloom.png');">
         <div class="promo-content">
           <h4>60% Off | Bloom Plant</h4>
           <a href="#">Shop Now</a>
