--- a/index.html
+++ b/index.html
@@ -127,13 +127,13 @@
             <section class="promo-section">
   <div class="promo-container">
     <div class="left-column">
-      <div class="promo-card small" style="background-image: url('/images/assets/deal-bloom.png');">
+      <div class="promo-card small" style="background-image: url('./images/assets/deal-bloom.png');">
         <div class="promo-content">
           <h4>60% Off | Bloom Plant</h4>
           <a href="#">Shop Now</a>
         </div>
       </div>
-      <div class="promo-card small" style="background-image: url('/images/assets/deal-ana.png');">
+      <div class="promo-card small" style="background-image: url('./images/assets/deal-ana.png');">
         <div class="promo-content">
           <h4>30% Off | Ana Plant</h4>
           <a href="#">Shop Now</a>
@@ -142,7 +142,7 @@
     </div>
 
     <div class="right-column">
-      <div class="promo-card large" style="background-image: url('/images/assets/deal-zabo.png');">
+      <div class="promo-card large" style="background-image: url('./images/assets/deal-zabo.png');">
         <div class="promo-content">
           <h2>25% Off | Zabo Plant</h2>
           <a href="#">Shop Now</a>
@@ -165,5 +165,5 @@
        
     </footer>
  
-</body>
+</body> 
 </html>
