--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
       <header>
             <nav class="navbar">
-                <div> <img src="images/assets/logo.png" alt=""></div>
+                <div class="logo"> <img src="images/assets/logo.png" alt=""></div>
                 <ul>
                     <li> <a href="#"> <span class="dark-1">Home</span></a></li>
                     <li><a href="#"> <span class="dark-2">Shop</span></a></li>
@@ -161,8 +161,45 @@
     </div>
 
     <!-- footer section -->
-     <footer>
-       
+    
+    <footer>
+        <div class="footer-container">
+            <div class="footer-section brand-info">
+                <img src="images/assets/logo.png" alt="Tauguel Logo" class="footer-logo">
+                <p>Indulge your senses with the beauty and fragrance of our fresh flower shop.</p>
+            </div>
+
+            <div class="footer-section footer-links">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section footer-links">
+                <ul>
+                    <li><a href="#">Features</a></li>
+                    <li><a href="#">Pricing</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Help Center</a></li>
+                </ul>
+            </div>
+
+            <div class="footer-section social-media">
+                <a href="#"><img src="images/assets/icon-linkedin.png" alt=""></a>
+                <a href="#"> <img src="images/assets/icon-twitter.png" alt=""></a>
+                <a href="#"><img src="images/assets/icon-facebook.png" alt=""></a>
+                <a href="#"><img src="images/assets/icon-youtube.png" alt=""> </a>
+            </div>
+        </div>
+    </footer>
+
+</body>
+</html>
     </footer>
  
 </body> 
