added some mistake

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navbar">
                 <div class="logo"> <img src="images/assets/logo.png" alt=""></div>
                 <ul>
-                    <li> <a href="#"> <span class="dark-2">Home</span></a></li>
+                    <li> <a href="#"> <span class="dark-2, dark-02">Home</span></a></li>
                     <li><a href="#"> <span class="dark-2">Shop</span></a></li>
                     <li><a href="#"><span class="dark-2">About us</span></a></li>
                     <li><a href="#"><span class="dark-3"> <i class="fa-solid fa-cart-shopping"></i> Card ($56)</span></a></li>
